--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ p {
     margin: auto;
     gap: 10px;
     margin-top: 20px;
+
 }
 
 .featured_product {
@@ -116,6 +117,8 @@ p {
     width: 50%;
     margin: auto;
     border-bottom: 3px solid black;
+    padding-top: 10px;
+
 
 
 }
@@ -123,3 +126,23 @@ p {
 /*-------------------------------------
 featured_flowers style  end  
 ---------------------------------------- */
+/* our Support style  start   */
+.supports {
+    height: 300px;
+    width: 80%;
+    margin: auto;
+    background-color: #F4F4F4;
+    margin-top: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+}
+
+.support {
+    text-align: center;
+}
+
+/* our Support style  end   */
